fix slide flicker

--- a/assets/style.css
+++ b/assets/style.css
@@ -39,10 +39,9 @@ body {
   color: var(--esn-dark-blue);
 }
 
-section {
+section{
+  height:100%;
   flex-direction: column;
-  height: 100%;
-  background-color: white;
   line-height: 1.25;
 }
 
